--- a/css/style.css
+++ b/css/style.css
@@ -328,5 +328,9 @@ h6 {
   border: 3px solid red;
 }
 .form-input::placeholder {
+  font-size: 14px;
   text-transform: uppercase;
+  font-family: "Montserrat";
+  font-weight: bold;
+  color: #bbbbbb;
 }
